
	- More friendly CFLAGS and LDFLAGS for configure
	- ACL_ALLWEEK bugfix
	- Added missing increment of UDP connection counter.
	- Changed ftpget select to check for EWOULDBLOCK/EAGAIN
	  (workaround for broken Solaris select(2)).
	- Fixed MALLINFO calls for Linux
	- Fixed strerror() problems on SunOS 4.1.x
	- Fixed DefaultAnnounceRate; set to zero by defult.
	- Changed all port variables to u_short.
	- Created AF_UNIX versions of comm_open(), comm_connect().
	- Changed ftpget server to use UNIX domain socket.
	- Removed RESET_SIGNAL_HANDLER check--always reset the signal
	  handler.
	- Added instrumentation of basic IPCache stats.
	- Fixed calculation of neighbor average RTT.
	- Added 'outbound_addr_list' to config
	- Change getFirstParent() to getFirstUpParent().
	- Changed ftpget to use an additional pipe() for crash detection
	- Added ICP_OP_DENIED message type
	- Added patches for Nextstep port from Luke Howard
	  <lukeh@vurt.schnet.edu.au>
	- Added a lifetime to HTTP server connections being deferred.
	- Added IP address ranges in 'src' ACLs
	- Added FQDN's in 'src' ACLs
	- Fixed request structure free-memory-read/coredump bug.
	- Changed icp.c to select on client socket to detect aborts.
	- Better compliance with HTTP/1.1 *DRAFT* regarding which reply
	  codes can be cached.
	- Added 'hierarchy_stoplist' configuration option.
	- Changed mallopt option M_MXFAST to 512 bytes.
	- Added -Y option to only return UDP_HIT or UDP_DENIED during
	  store reload.
	- Added UDP_HIT_OBJ type.  Just like a UDP_HIT, but object data
	  is returned in the UDP packet if it will fit; saves a TCP
	  connection.  Not compiled in by default, add -DUDP_HIT_WITH_OBJ
	  to src/Makefile DEFINES.


Changes to squid-1.0.beta9 (May 23, 1996):

	- Fixed storeToString() coredump bug on 'swap_buf'
	- Added back the CIDR notation functionality to decoding IP
	  address ACLs.
	- Fixed ftpget listing parsing coredump bug.
	- Fixed neighborsUdpAck() coredump for late-arriving ICP replies.